--- a/Frontend/webapp/src/pages/Dashboard/ExpedientesDetalle/DatosGenerales/DatosGenerales.css
+++ b/Frontend/webapp/src/pages/Dashboard/ExpedientesDetalle/DatosGenerales/DatosGenerales.css
@@ -6,7 +6,7 @@
     grid-template-rows: 1fr 2fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    height: 100%;
+    /* height: 1px; */
 }
 
 
